# flying-snake

./: .gitignore  CREDITS.md  Cargo.toml  Makefile  README.md  diamondback.md  eastern-diamondback.md  flying-snake.md
.github/workflows/: linting.yaml  testing.yaml
runtime/: start.rs
src/: ast.rs  checks.rs  compile.rs  context.rs  dynasm.rs  errors.rs  instr.rs  jit.rs  main.rs  parse.rs  repl.rs  tracing.rs  typed_ast.rs  types.rs
src/optimize/: ast.rs  context.rs  core.rs  mod.rs  translate.rs
src/validate/: ast.rs  context.rs  core.rs  mod.rs
tests/: all_tests.rs  arity_mismatch.snek  break_outside_loop.snek  cast_any.snek  cast_nothing.snek  fact_loop.snek  fact_tail_rec.snek  ge_condition.snek  if_condition_type_error.snek  loop_break.snek  mutual_recursion.snek  set_subtyping.snek  typed_add1.snek  typed_fact_tail_rec.snek  typed_if_bool_param.snek  typed_mutual_recursion.snek  typed_set.snek  untyped_fun_any.snek
tests/infra/: mod.rs
